--- a/plugins/release/notes/porret_gaming.html
+++ b/plugins/release/notes/porret_gaming.html
@@ -117,6 +117,36 @@
                             <div class="news-group-item">
                                 <div class="row">
                                     <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/billing/GooglePlay_Billing_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">YouTube Tutorial Series</div>
+                                        <div class="news-sub-title">2024-02-09</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>We have released our first YouTube tutorial series for our billing plugin.</li>
+                                                <li>Leave a like, share and subscribe to help support us!</li>
+                                                <li><a href="https://www.youtube.com/playlist?list=PLA_wfrT3fpg3TrteW2aUddl_zgsJtRt56" target="_blank">YouTube Series</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 5px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
                                         <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
@@ -284,7 +314,7 @@
                         </div>
                     </div>
                     <div style="padding: 5px"></div>
-                    <div class="news-card expanded">
+                    <div class="news-card">
                         <div class="news-container">
                             <div class="news-group-item">
                                 <div class="row">
